--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .container-imagen{
-    width: 90px;
+    width: 300px;
 }
 .container-imagen img{
     width: 100%;
@@ -37,4 +37,14 @@ main{
     height: calc(100vh - 100px);
     background-color: rgb(1, 84, 117);
     color: #d1d1d1;
+}
+.container-main{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    gap: 40px;
+    height: 50%;
+    width: 100%;
+    padding: 0 100px;
 }
