--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     box-sizing: 0;
     margin: 0;
+    width: 100vw;
+    
 }
 .container{
     display: flex;
@@ -34,7 +36,7 @@ body{
 }
 
 main{
-    height: calc(100vh - 100px);
+    height: calc(100vh - 230px);
     background-color: rgb(1, 84, 117);
     color: #d1d1d1;
 }
@@ -47,4 +49,12 @@ main{
     height: 50%;
     width: 100%;
     padding: 0 100px;
+}
+.foot{
+    background-color: rgb(1, 36, 77);
+    color: #fff;
+    height: 150px;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
 }
